[gd_scene load_steps=32 format=2]

[ext_resource path="res://PlayerNeo.gd" type="Script" id=1]
[ext_resource path="res://Assets/CloudLikeTree1/CloudLikeTree1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Building/FloorXGround.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Building/FloorXEntrance.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Ground/Ground.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Building/FloorXPillars.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Building/FloorXBottomWall.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Building/FloorXGlassShort.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Building/FloorXTopWall.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Building/FloorXGlassLong.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/UITheme.tres" type="Theme" id=11]
[ext_resource path="res://Assets/Crosshair.png" type="Texture" id=12]
[ext_resource path="res://Assets/Waifu/WaifuPod/WaifuPod.tscn" type="PackedScene" id=13]
[ext_resource path="res://World.gd" type="Script" id=14]

[sub_resource type="Gradient" id=27]
colors = PoolColorArray( 0.0745098, 0.0745098, 0.0745098, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture2D" id=28]
gradient = SubResource( 27 )
width = 1920
height = 85
fill_from = Vector2( 0, -0.2 )
fill_to = Vector2( 0, 1 )

[sub_resource type="Theme" id=26]

[sub_resource type="ProceduralSky" id=15]
sky_top_color = Color( 0.894118, 0.945098, 0.960784, 1 )
sky_horizon_color = Color( 0.839216, 0.94902, 0.980392, 1 )
ground_horizon_color = Color( 0.839216, 0.94902, 0.980392, 1 )
ground_curve = 0.0313834

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 15 )
tonemap_mode = 3
glow_enabled = true
glow_intensity = 0.15
glow_strength = 1.25
glow_blend_mode = 1

[sub_resource type="CapsuleShape" id=4]
radius = 0.175
height = 0.25

[sub_resource type="CapsuleMesh" id=20]
radius = 0.175
mid_height = 0.25

[sub_resource type="CubeMesh" id=23]
size = Vector3( 0.02, 1.2, 2.134 )

[sub_resource type="SpatialMaterial" id=25]
albedo_color = Color( 0.152941, 0.152941, 0.152941, 1 )

[sub_resource type="ViewportTexture" id=24]
viewport_path = NodePath("3D World/Building/Monitor/Sprite3D/Viewport")

[sub_resource type="BoxShape" id=14]
extents = Vector3( 10.3, 0.886498, 10.5 )

[sub_resource type="BoxShape" id=17]
extents = Vector3( 2.667, 1.6, 1.4 )

[sub_resource type="BoxShape" id=19]
extents = Vector3( 1.3, 1.6, 4.0165 )

[sub_resource type="BoxShape" id=16]
extents = Vector3( 1.44761, 1.6, 3.15087 )

[sub_resource type="BoxShape" id=21]
extents = Vector3( 1.42853, 1.52755, 1.99103 )

[sub_resource type="BoxShape" id=22]
extents = Vector3( 1.27145, 1.49719, 1.91113 )

[sub_resource type="BoxShape" id=18]
extents = Vector3( 3.4, 1.6, 2.7 )

[node name="subRoot" type="Node"]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopGradient" type="TextureRect" parent="UI"]
anchor_right = 1.0
margin_bottom = 85.0
texture = SubResource( 28 )
expand = true

[node name="Crosshair" type="TextureRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = -17.0
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 12 )
stretch_mode = 1

[node name="MoneyCounter" type="RichTextLabel" parent="UI"]
margin_top = 8.0
margin_right = 960.0
margin_bottom = 73.0
theme = ExtResource( 11 )
bbcode_text = " Money: 0g"
text = " Money: 0g"
fit_content_height = true
scroll_active = false

[node name="TouchControls" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )

[node name="ButtonW" type="Button" parent="UI/TouchControls"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = -280.0
margin_right = 280.0
margin_bottom = -180.0
text = "W"

[node name="ButtonA" type="Button" parent="UI/TouchControls"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = -180.0
margin_right = 180.0
margin_bottom = -80.0
text = "A"

[node name="ButtonS" type="Button" parent="UI/TouchControls"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = -180.0
margin_right = 280.0
margin_bottom = -80.0
theme = SubResource( 26 )
text = "S"

[node name="ButtonD" type="Button" parent="UI/TouchControls"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 280.0
margin_top = -180.0
margin_right = 380.0
margin_bottom = -80.0
text = "D"

[node name="ButtonSpace" type="Button" parent="UI/TouchControls"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -196.0
margin_top = -230.0
margin_right = -96.0
margin_bottom = -130.0
text = "Space"

[node name="ButtonE" type="Button" parent="UI/TouchControls"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -296.0
margin_top = -230.0
margin_right = -196.0
margin_bottom = -130.0
text = "E"

[node name="3D World" type="Spatial" parent="."]
script = ExtResource( 14 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="3D World"]
environment = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="3D World"]
transform = Transform( 0.851117, 0.392875, 0.34821, 0, -0.663286, 0.748366, 0.524977, -0.636947, -0.564534, 4.44, 6.9, 0 )
shadow_enabled = true

[node name="Player" type="KinematicBody" parent="3D World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 1.61, -1.2 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="3D World/Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Camera" type="Camera" parent="3D World/Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
current = true
fov = 69.0

[node name="RayCast" type="RayCast" parent="3D World/Player/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="Shape" type="MeshInstance" parent="3D World/Player"]
transform = Transform( 1, 0, 0, 0, 7.54979e-08, -1, 0, 1, 7.54979e-08, 0, 0, 0 )
mesh = SubResource( 20 )

[node name="Building" type="Spatial" parent="3D World"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -2.2, 1.1, -1.7 )

[node name="Floor1" type="Spatial" parent="3D World/Building"]

[node name="WaifuPod" parent="3D World/Building/Floor1" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3125, 0.2, 4.5 )
current_waifu = "Rem"

[node name="WaifuPod2" parent="3D World/Building/Floor1" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5625, 0.2, 4.5 )
podID = "Pod2"

[node name="FloorXGround" parent="3D World/Building/Floor1" instance=ExtResource( 3 )]

[node name="FloorXPillars" parent="3D World/Building/Floor1" instance=ExtResource( 6 )]

[node name="FloorXBottomWall" parent="3D World/Building/Floor1" instance=ExtResource( 7 )]

[node name="FloorXEntrance" parent="3D World/Building/Floor1" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0499997, 0, 0 )

[node name="FloorXGlassShort" parent="3D World/Building/Floor1" instance=ExtResource( 8 )]

[node name="FloorXGlassShort2" parent="3D World/Building/Floor1" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="FloorXTopWall" parent="3D World/Building/Floor1" instance=ExtResource( 9 )]

[node name="Floor2" type="Spatial" parent="3D World/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.2, 0 )

[node name="FloorXGround" parent="3D World/Building/Floor2" instance=ExtResource( 3 )]

[node name="FloorXPillars" parent="3D World/Building/Floor2" instance=ExtResource( 6 )]

[node name="FloorXGlassLong" parent="3D World/Building/Floor2" instance=ExtResource( 10 )]
transform = Transform( -1, 0, -5.6426e-07, 0, 1, 0, 5.6426e-07, 0, -1, 0, 0.1, 0 )

[node name="FloorXGlassLong2" parent="3D World/Building/Floor2" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 1.12852e-06, 0, 1, 0, -1.12852e-06, 0, 1, 0, 0.0999999, 0 )

[node name="FloorXGlassShort" parent="3D World/Building/Floor2" instance=ExtResource( 8 )]

[node name="FloorXGlassShort2" parent="3D World/Building/Floor2" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="FloorXTopWall" parent="3D World/Building/Floor2" instance=ExtResource( 9 )]

[node name="Floor3" type="Spatial" parent="3D World/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.4, 0 )

[node name="FloorXGround" parent="3D World/Building/Floor3" instance=ExtResource( 3 )]

[node name="FloorXPillars" parent="3D World/Building/Floor3" instance=ExtResource( 6 )]

[node name="FloorXGlassLong" parent="3D World/Building/Floor3" instance=ExtResource( 10 )]
transform = Transform( -1, 0, -5.6426e-07, 0, 1, 0, 5.6426e-07, 0, -1, 0, 0.1, 0 )

[node name="FloorXGlassLong2" parent="3D World/Building/Floor3" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 1.12852e-06, 0, 1, 0, -1.12852e-06, 0, 1, 0, 0.0999999, 0 )

[node name="FloorXGlassShort" parent="3D World/Building/Floor3" instance=ExtResource( 8 )]

[node name="FloorXGlassShort2" parent="3D World/Building/Floor3" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="FloorXTopWall" parent="3D World/Building/Floor3" instance=ExtResource( 9 )]

[node name="FloorXGround2" parent="3D World/Building/Floor3" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.2, 0 )

[node name="Monitor" type="MeshInstance" parent="3D World/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.79721, 1.375, 0 )
mesh = SubResource( 23 )
material/0 = SubResource( 25 )

[node name="Sprite3D" type="Sprite3D" parent="3D World/Building/Monitor"]
transform = Transform( -4.39737e-08, 0, 1, 0, 0.55, 0, -1.006, 0, -4.37114e-08, 0.015, 0, 0 )
texture = SubResource( 24 )

[node name="Viewport" type="Viewport" parent="3D World/Building/Monitor/Sprite3D"]
size = Vector2( 200, 200 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="3D World/Building/Monitor/Sprite3D/Viewport"]
margin_right = 325.0
margin_bottom = 81.0
rect_scale = Vector2( 0.33, 0.5 )
theme = ExtResource( 11 )
text = "Prices:"

[node name="Ground" type="StaticBody" parent="3D World"]

[node name="Ground" parent="3D World/Ground" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.1, 0 )

[node name="GroundCollider" type="CollisionShape" parent="3D World/Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.2, 0 )
shape = SubResource( 14 )

[node name="CollisionShape3" type="CollisionShape" parent="3D World/Ground"]
transform = Transform( 0.305895, 0, -0.952065, 0, 1, 0, 0.952065, 0, 0.305895, -8.28837, 2.5, 9.55798 )
shape = SubResource( 17 )

[node name="CollisionShape5" type="CollisionShape" parent="3D World/Ground"]
transform = Transform( 0.985978, 0, -0.166872, 0, 1, 0, 0.166872, 0, 0.985978, -8.2794, 2.5, 3.28862 )
shape = SubResource( 19 )

[node name="CollisionShape2" type="CollisionShape" parent="3D World/Ground"]
transform = Transform( 0.989729, 0, 0.142957, 0, 1, 0, -0.142957, 0, 0.989729, -8.2326, 2.5, -3.32192 )
shape = SubResource( 16 )

[node name="CollisionShape6" type="CollisionShape" parent="3D World/Ground"]
transform = Transform( 0.999542, 0, 0.0302768, 0, 1, 0, -0.0302768, 0, 0.999542, -8.53648, 2.5, -7.73893 )
shape = SubResource( 21 )

[node name="CollisionShape7" type="CollisionShape" parent="3D World/Ground"]
transform = Transform( 0.0744218, 0, -0.997227, 0, 1, 0, 0.997227, 0, 0.0744218, -5.38923, 2.5, -9.72495 )
shape = SubResource( 21 )

[node name="CollisionShape8" type="CollisionShape" parent="3D World/Ground"]
transform = Transform( -0.278321, 0, -0.960488, 0, 1, 0, 0.960488, 0, -0.278321, -2.41562, 2.5, -9.36682 )
shape = SubResource( 21 )

[node name="CollisionShape10" type="CollisionShape" parent="3D World/Ground"]
transform = Transform( -0.99996, 0, -0.00897088, 0, 1, 0, 0.00897088, 0, -0.99996, 0.228227, 2.5, -9.49475 )
shape = SubResource( 21 )

[node name="CollisionShape9" type="CollisionShape" parent="3D World/Ground"]
transform = Transform( 0.439234, 0, -0.898373, 0, 1, 0, 0.898373, 0, 0.439234, 2.69859, 2.5, -9.48388 )
shape = SubResource( 22 )

[node name="CollisionShape4" type="CollisionShape" parent="3D World/Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.61059, 2.5, -7.81096 )
shape = SubResource( 18 )

[node name="Trees" type="Spatial" parent="3D World"]

[node name="Tree3" parent="3D World/Trees" instance=ExtResource( 2 )]
transform = Transform( 0.861457, -0.0609287, -0.504162, 0.0871921, 0.995779, 0.0286428, 0.50029, -0.0686335, 0.863134, 9.1, 1.1, 7.4048 )

[node name="Tree2" parent="3D World/Trees" instance=ExtResource( 2 )]
transform = Transform( -0.5, 0, -0.866025, 0, 1, 0, 0.866026, 0, -0.5, -6.51745, 1.36067, -7.81966 )

[node name="Tree" parent="3D World/Trees" instance=ExtResource( 2 )]
transform = Transform( 0.996195, 0.0871557, 0, -0.0871189, 0.995773, 0.0290847, 0.0025349, -0.028974, 0.999577, 3.5, 0.8, -7.9 )
